--- a/src/Resources/Locales/ru_RU.axaml
+++ b/src/Resources/Locales/ru_RU.axaml
@@ -377,14 +377,14 @@
   <x:String x:Key="Text.PageTabBar.Welcome.Title" xml:space="preserve">Хранилища</x:String>
   <x:String x:Key="Text.Paste" xml:space="preserve">Вставить</x:String>
   <x:String x:Key="Text.Period.JustNow" xml:space="preserve">Сейчас</x:String>
-  <x:String x:Key="Text.Period.MinutesAgo" xml:space="preserve">{0} минут спустя</x:String>
-  <x:String x:Key="Text.Period.HoursAgo" xml:space="preserve">{0} часов спустя</x:String>
+  <x:String x:Key="Text.Period.MinutesAgo" xml:space="preserve">{0} минут назад</x:String>
+  <x:String x:Key="Text.Period.HoursAgo" xml:space="preserve">{0} часов назад</x:String>
   <x:String x:Key="Text.Period.Yesterday" xml:space="preserve">Вчера</x:String>
-  <x:String x:Key="Text.Period.DaysAgo" xml:space="preserve">{0} дней спустя</x:String>
+  <x:String x:Key="Text.Period.DaysAgo" xml:space="preserve">{0} дней назад</x:String>
   <x:String x:Key="Text.Period.LastMonth" xml:space="preserve">Последний месяц</x:String>
-  <x:String x:Key="Text.Period.MonthsAgo" xml:space="preserve">{0} месяцев спустя</x:String>
-  <x:String x:Key="Text.Period.LastYear" xml:space="preserve">Последние годы</x:String>
-  <x:String x:Key="Text.Period.YearsAgo" xml:space="preserve">{0} лет спустя</x:String>
+  <x:String x:Key="Text.Period.MonthsAgo" xml:space="preserve">{0} месяцев назад</x:String>
+  <x:String x:Key="Text.Period.LastYear" xml:space="preserve">В пролому году</x:String>
+  <x:String x:Key="Text.Period.YearsAgo" xml:space="preserve">{0} лет назад</x:String>
   <x:String x:Key="Text.Preference" xml:space="preserve">Параметры</x:String>
   <x:String x:Key="Text.Preference.AI" xml:space="preserve">ОТКРЫТЬ ВИ</x:String>
   <x:String x:Key="Text.Preference.AI.Server" xml:space="preserve">Сервер</x:String>
