Waits for the locks list to finish loading before making the checkbox clickable

--- a/src/Views/LFSLocks.axaml
+++ b/src/Views/LFSLocks.axaml
@@ -48,6 +48,7 @@
       <CheckBox Grid.Column="0"
                 Content="Show only my locks"
                 IsChecked="{Binding ShowOnlyMyLocks}"
+                IsEnabled="{Binding !IsLoading}"
                 VerticalAlignment="Center" />
     </Grid>
 
