--- a/src/Views/Statistics.axaml
+++ b/src/Views/Statistics.axaml
@@ -124,8 +124,8 @@
     </ListBox>
 
     <!-- Color Picker -->
-    <Border Grid.Row="1" HorizontalAlignment="Right">
-      <Button Background="Transparent" BorderThickness="0" Width="28" Height="28" Margin="0,0,24,0" VerticalAlignment="Center">
+    <Border Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center">
+      <Button Background="Transparent" BorderThickness="1" BorderBrush="{DynamicResource Brush.Border2}" Width="28" Height="28" CornerRadius="14" Margin="0,0,24,0">
         <Button.Flyout>
           <Flyout>
             <Border Padding="8">
