--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -631,5 +631,19 @@
         </ContentControl.DataTemplates>
       </ContentControl>
     </Grid>
+
+    <!-- Right (Auto-Fetch) -->
+    <Border Grid.Column="2" Margin="12" HorizontalAlignment="Center" VerticalAlignment="Center" Effect="drop-shadow(0 0 12 #A0000000)" IsVisible="{Binding IsAutoFetching}">
+      <Border Background="{DynamicResource Brush.Popup}" CornerRadius="6">
+        <StackPanel Orientation="Vertical" Margin="16,8">
+          <TextBlock Text="{DynamicResource Text.Repository.AutoFetching}"/>
+          <ProgressBar Margin="0,8,0,0"
+                       HorizontalAlignment="Stretch"
+                       IsIndeterminate="{Binding IsAutoFetching}"
+                       Background="{DynamicResource Brush.FG2}" Foreground="{DynamicResource Brush.Accent}"
+                       Minimum="0" Maximum="100"/>
+        </StackPanel>
+      </Border>
+    </Border>
   </Grid>
 </UserControl>
